# Functional

./: .gitignore
BrianBeckmannStateMonad/StateMonad/: StateMonad.csproj  StateMonad.sln  UpgradeLog.htm
C#/MonadsC#/SelectMany/: Description  SelectMany.sln
F#/: FlattenTree.fsx
F#/CollatzSequence/: CollatzSequence.sln
F#/CollatzSequence/CollatzSequence/: AssemblyInfo.fs  CollatzSequence.fsproj  Program.fs
F#/FizzBuzz/: FizzBuzz.sln
F#/FizzBuzz/FizzBuzz/: AssemblyInfo.fs  FizzBuzz.fsproj  Program.fs
F#/Fold/: Fold.sln
F#/Fold/Fold/: Fold.csproj  Program.cs
F#/LearnF#/Capstone1/: Program.fs
F#/LearnF#/Capstone2/: Auditing.fs  Domain.fs  Operations.fs  Program.fs  \tmp\audits\8715be3c-c34b-456b-b4d8-c5d431759c31  script.fsx
F#/LearnF#/Capstone3/: Auditing.fs  Capstone3.fsproj  Domain.fs  FileRepository.fs  Operations.fs  Program.fs  Transaction.fs  project.json  project.lock.json  script.fsx
F#/NETCoreExample/ClassLibraryExample/: ClassLibraryExample.fs  ClassLibraryExample.fsproj  Script.fsx
F#/WriterMonad_old/WriterMonad/: Program.cs
Haskell/: GHCExtensions.txt  HaskellAndSublime.txt  MonadTransformer.txt  QuickCheck Cheat Sheet  QuickCheck and HSpec
Haskell/CodingInterview/: 1_2_reverse_string.hs  1_4_replace_space_in_http.hs  1_5_compress_string.hs
Haskell/ErikMeijer/Countdown/: Countdown.hs
Haskell/ErikMeijer/Countdown2/: ExpressionTree.hs
Haskell/HaskellProgramming/: DoubleComposition.txt  TutorialTemplate.hsfiles
Haskell/HaskellProgramming/Chapter16/: TutorialTemplate.hsfiles
Haskell/HaskellProgramming/Chapter21/: TutorialTemplate.hsfiles
Haskell/HaskellProgramming/Chapter22/: Reader.README  (+1 more)
Haskell/HaskellProgramming/Chapter22/ShawtyReader/: ShawtyReader.cabal  untitled.sublime-workspace
Haskell/HaskellProgramming/Chapter22/ShawtyReader/app/: Main.hs
Haskell/HaskellProgramming/Chapter26/EitherT/: EitherT.cabal  untitled.sublime-workspace
Haskell/HaskellProgramming/Chapter26/EitherT/app/: Main.hs
Haskell/HaskellProgramming/Chapter26/EitherT/src/: Lib.hs
Haskell/HaskellProgramming/Chapter26/EitherT/test/: EitherTSpec.hs  Spec.hs
Haskell/MaybeIO/: MaybeIO.hs
Haskell/Playground/: BST2ndLargestElement.hs
Haskell/Poker/: Poker.cabal  poker.hs
Haskell/ProgrammingF#/: Example_7_16.hs  Example_7_17.hs
Haskell/WhyDoMonadsMatter/: Dependence.hs  DependenceWithConfig.hs  Destruction.hs  DestructionComposable.hs  Error.hs  ErrorFailureTolerant.hs  ErrorFailureTolerantMonad.hs  Uncertainty.hs  UncertaintyBestHand.hs  UncertaintyBestHand2Last.hs  UncertaintyBestHandCombineP.hs  UncertaintyPowerSet.hs
Haskell/poker/: poker.hs
Haskell/trivial/: BinaryTree.hs  BinaryTree2.hs  CaseExpression.hs  FailableDouble.hs  Fibonacci.hs  FunctionReturningFunction.hs  Person.hs  RandomMonad.hs  RecursiveDataTypes.hs  and.hs  bubblesort.hs  concat.hs  drop.hs  elem.hs  enums.hs  extractElementFromList.hs  factorial.hs  factors.hs  filter.hs  fizzbuzz.hs  flatten.hs  hailstone.hs  map.hs  move_lowest_element_to_front.hs  perfect.hs  prime.hs  pyths.hs  replicate.hs  safetail.hs  scalar_product.hs  select_nth.hs  sum_map.hs  sumtorial.hs  zip.hs
MonadsC#/SelectMany/: SelectMany.sln
(+617 files in other folders)
