name:                ShawtyReader
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Exercise 'Shawty' in Chapter 22, using ReaderT
homepage:            https://github.com/githubuser/ShawtyReader#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
copyright:           2015, Chris Allen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ShawtyReader-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ShawtyReader
                     , bytestring
                     , text
                     , random
                     , hedis
                     , network-uri
                     , scotty
                     , mtl
                     , transformers
  default-language:    Haskell2010

test-suite ShawtyReader-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ShawtyReader
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ShawtyReader
